# kasperskyFall2023

./: LICENSE  README.md
Spreadsheet/: CMakeLists.txt  README.md  Table.cpp  Table.hpp  main.cpp  readme.md
Spreadsheet/src/: Cell.cpp  Cell.hpp  Table.cpp  Table.hpp
Spreadsheet/tests/: CMakeLists.txt  tests.cpp
Spreadsheet/tests/CsvFiles/: Data0.csv  Data1.csv  Data2.csv  Data3.csv  Data4.csv  Data5.csv  ExpData0.csv  ExpData1.csv  ExpData2.csv  ExpData3.csv  ExpData4.csv  ExpData5.csv
Task/: Cell.hpp
TcpServer/: README.MD  server.cpp
task3/: README.MD  server  server.cpp
task4/: Cell.cpp
task5/: README.MD  main.cpp
